public/stylesheets/ui/documents.css
/* ... */
    body.minidocs #document_list .document {
      float: left;
      min-height: 0;
      height: 44px; width: 165px;
      text-align: center;
      padding: 92px 10px 0 10px;
      margin: 0 20px 30px 0;
    }
    #document_list .document.owns_notes,
    #document_list .document.has_notes {
      min-height: 96px;
    }
  img.doc {
    cursor: pointer;
    background: #fff;
    position: absolute;
    width: 60px; height: 75px;
    padding: 1px;
    border: 1px solid #aaa;
    box-shadow: 2px 2px 0 #e0e0e0; -webkit-box-shadow: 2px 2px 0 #e0e0e0; -moz-box-shadow: 2px 2px 0 #e0e0e0;
  }
    body.minidocs #document_list .document img.doc {
      margin-left: 56px;
    }
  .document .mini_note {
    position: absolute;
    top: 13px; left: -3px;
    opacity: 0.85;
  }
    body.minidocs #document_list .document .mini_note {
      left: 53px;
    }
  .document .select {
    position: absolute;
    left: 0px; top: 0px;
    width: 70px; height: 85px;
    -moz-border-radius: 3px; -webkit-border-radius: 3px; border-radius: 3px;
  }
    body.minidocs #document_list .document .select {
      margin-left: 56px;
    }
    .document.is_selected .select {
      background: #09f;
    }
  .document img.doc {
    left: 3px; top: 3px;
  }
    .document.is_selected img.doc {
      border-color: transparent;
      box-shadow: none; -webkit-box-shadow: none; -moz-box-shadow: none;
    }
  .document .title {
    display: block;
    color: #000;
    font: bold 16px/20px Helvetica, Arial;
    margin-bottom: 2px;
    min-height: 20px;
  }
    body.minidocs #document_list .document .title {
      font: bold 11px/14px Helvetica, Arial;
      overflow: hidden;
      min-height: 14px;
      max-height: 28px;
      margin-bottom: 0;
    }
    .document .doc_title {
      cursor: pointer;
    }
    .document .document_tool {
      display: inline;
      zoom: 1;
      cursor: pointer;
      width: 0; height: 18px;
      vertical-align: text-bottom;
      margin-left: 8px;
      line-height: 18px;
      padding-right: 16px;
    }
      .document .document_tool.lock:hover {
        background-position: center -28px;
      }
      .document .edit_glyph {
        display: inline;
        background-color: #fff;
        zoom: 1;
        visibility: hidden;
        cursor: pointer;
      }
        .document.is_editable:hover .edit_glyph,
        .note.is_editable:hover .edit_glyph {
          visibility: visible;
        }
        .document.pending_access:hover .edit_glyph {
          visibility: hidden;
        }
      body.minidocs #document_list .document .document_tool {
        position: absolute;
        top: 8px; left: 125px;
      }
        body.minidocs #document_list .document .edit_glyph.bottom {
          top: 32px;
        }
      .document .document_tool.spinner {
        display: block;
        margin: 0; padding: 0;
        position: absolute;
        left: 27px; top: 50px;
        width: 16px;
      }
        body.minidocs #document_list .document .document_tool.spinner {
          top: 50px; left: 83px;
        }
  .document .metalines, .document .datalines {
    font-size: 10px;
    margin: 2px 0 5px;
    color: #808080;
  }
    body.minidocs #document_list .document .metalines,
    body.minidocs #document_list .document .datalines {
      display: none;
    }
    .document .data_item {
      cursor: pointer;
      display: inline-block;
      font-size: 9px; line-height: 13px;
      color: #555;
      border-radius: 2px; -moz-border-radius: 2px; -webkit-border-radius: 2px;
      padding: 1px 5px;
      border: 1px solid #bbb; border-top-color: #ccc; border-bottom-color: #aaa;
      margin: 0 2px 5px 0;
    }
      .document .data_item:hover, .document .data_item.active {
        color: #000;
        border-color: #0099ff;
      }
    .document .datalines .document_tool {
      position: relative;
      top: -1px; left: -5px;
      display: none;
    }
      .document:hover .datalines .document_tool {
        height: auto;
        line-height: 13px;
        display: inline-block;
      }
  .document .description {
    font: 13px/18px Georgia;
    color: #333;
    margin: 10px 0 5px;
  }
    body.minidocs #document_list .document .description {
      display: none;
    }
    .document .description > b {
      font-size: 12px;
    }
    .document.error_access .description {
      font-size: 11px;
      line-height: 16px;
      font-style: italic;
      color: #844;
    }
      .document.error_access .description .text_link {
        color: #000;
      }
  .document .show_notes {
    cursor: pointer;
    position: absolute;
    left: 7px; top: 90px;
    width: 60px;
    text-align: center;
  }
    body.minidocs #document_list .document .show_notes {
      position: static;
      display: inline-block;
      width: auto;
    }
    .document.has_notes .show_notes {
      text-align: left;
    }
    .document .show_notes .cancel_search {
      margin-right: 5px;
      vertical-align: text-top;
      display: none;
    }
      .document.has_notes .show_notes .cancel_search {
        display: inline-block;
      }

/*---------------------------- Page References -------------------------------*/
.document .pages {
}
  .document .page_list {
    position: relative;
    margin-right: -45px;
  }
.document .pages_header, .document .mentions_header {
  position: relative;
  line-height: 18px;
  padding-left: 20px;
  margin: 20px 10px 12px 0;
}
  .document .pages_title, .document .mentions_title {
    font-weight: bold;
    font-size: 11px;
    color: #000;
    margin-right: 15px;
  }
    .document .pages_only {
      color: #000;
    }
  .document .pages .cancel_search, .document .mentions .cancel_search {
    position: absolute;
    left: 0; top: 3px;
    cursor: pointer;
  }
  .document .arrow {
    font-weight: normal;
  }
    .document .arrow.left {
      margin-left: 10px;
    }
.document .page {
  padding-bottom: 15px;
}
/* ... */

